# alpha-holdings

./: .env.example  .gitignore  CHANGELOG.md  PLAN.md  README.md  STATUS.md  alpha.duckdb  holdings.example.json  pyproject.toml
.github/: copilot-instructions.md
src/alpha_holdings/: __init__.py  allocation.py  backtest.py  cli.py  config.py  etfs.py  fundamentals.py  holdings.py  llm.py  models.py  monitor.py  scoring.py  signals.py  themes.py
src/alpha_holdings/analytics/: __init__.py  attribution.py  goal.py  html_report.py  performance.py
src/alpha_holdings/backtest/: __init__.py  runner.py
src/alpha_holdings/data/: __init__.py  normalization.py  refresh.py  storage.py
src/alpha_holdings/data/providers/: __init__.py  base.py
src/alpha_holdings/data/providers/free/: __init__.py  edgar.py  stooq.py  yahoo.py
src/alpha_holdings/data/providers/paid/: __init__.py
src/alpha_holdings/domain/: __init__.py  investor_profile.py  models.py
src/alpha_holdings/portfolio/: __init__.py  asset_allocation.py  construction.py  rebalance.py  state.py
src/alpha_holdings/prompts/: course_correction.py  macro_regime.py  theme_discovery.py  thesis_validation.py
src/alpha_holdings/scoring/: __init__.py  fundamental_model.py
src/alpha_holdings/universe/: __init__.py  builder.py
tests/: __init__.py  conftest.py  test_analytics.py  test_attribution.py  test_backtest.py  test_construction.py  test_holdings_state.py  test_html_report.py  test_manifests.py  test_models.py  test_normalization.py  test_profiles.py  test_provider_contracts.py  test_rebalance.py  test_refresh.py  test_report.py  test_scoring.py  test_storage.py  test_upgrade_path.py
tests/bdd/: test_asset_allocation_bdd.py  test_attribution_bdd.py  test_backtest_bdd.py  test_construction_bdd.py  test_goal_analytics_bdd.py  test_holdings_state_bdd.py  test_performance_bdd.py  test_rebalance_bdd.py  test_scoring_bdd.py
tests/bdd/features/: asset_allocation.feature  attribution.feature  backtest.feature  construction.feature  goal_analytics.feature  holdings_state.feature  performance.feature  rebalance.feature  scoring.feature
