[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "alpha-holdings"
version = "0.1.0"
description = "Free-data upgradeable strategy engine for portfolio research and management"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "Vincent Giraud", email = "vincent@example.com"}
]
keywords = ["portfolio", "research", "backtesting", "scoring", "asset-allocation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial :: Investment",
]

dependencies = [
    "pydantic>=2.0",
    "yfinance>=0.2.28",
    "pandas>=2.0",
    "pyarrow>=12.0",
    "duckdb>=0.9.0",
    "typer>=0.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "pytest-bdd>=8.1",
    "ruff>=0.1.0",
]

[project.scripts]
alpha = "alpha_holdings.cli:app"

[tool.hatch.build]
targets.wheel.packages = ["src/alpha_holdings"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/tests",
    "/README.md",
    "/LICENSE",
]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-v --cov=src/alpha_holdings --cov-report=term-missing --cov-report=html"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "ARG", "SIM", "RUF"]
ignore = ["E501"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.isort]
known-first-party = ["alpha_holdings"]

[tool.coverage.run]
source = ["src/alpha_holdings"]
omit = ["*/tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == '__main__':",
    "if TYPE_CHECKING:",
]
