[project]
name = "alpha-holdings"
version = "0.1.0"
description = "Autonomous thematic investment research tool"
requires-python = ">=3.11"
dependencies = [
    "openai>=1.82.0",
    "azure-identity>=1.19.0",
    "yfinance>=0.2.50",
    "pandas>=2.2.0",
    "pydantic>=2.10.0",
    "python-dotenv>=1.0.0",
    "requests>=2.32.0",
    "rich>=13.9.0",
    "click>=8.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ipykernel>=6.29.0",
]

[project.scripts]
alpha-holdings = "alpha_holdings.cli:cli"

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
